<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shake That Phone</string>
    <string name="view_current_score">0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="sprint">Sprint</string>
    <string name="endurance">Endurance</string>
    <string name="reflexe">Reflex</string>
    <string name="jouer">Play</string>
    <string name="profil">Profile</string>
    <string name="aventure">Adventure</string>
    <string name="puissance">Power</string>
    <string name="title_activity_mode_reflexe">ReflexMode</string>
    <string name="title_activity_mode_puissance">PowerMode</string>
    <string name="title_activity_mode_sprint">SprintMode</string>
    <string name="title_activity_mode_endurance">EnduranceMode</string>
    <string name="title_activity_resultat_partie">Result</string>
    <string name="title_activity_profil">Profile</string>
    <string name="options">Options</string>
    <string name="title_activity_options">Options</string>
    <string name="menu">Menu</string>
    <string name="tutorielNon">Tutorial: NO</string>
    <string name="song_touchesNon">Sound: NO</string>
    <string name="musiqueNon">Music: NO</string>
    <string name="tutorielOui">Tutorial: YES</string>
    <string name="song_touchesOui">Sound: YES</string>
    <string name="musiqueOui">Music: YES</string>
    <string name="evaluer">Evaluate</string>
    <string name="contacter">Contact</string>
    <string name="tutoSprint">Shake your phone le plus rapidement possible pendant 3 secondes.</string>
    <string name="tutoEndurance">Shake your phone le plus vite possible pendant 20 secondes.</string>
    <string name="tutoPuissance">Shake your phone le plus fort possible en 3 secondes.\n Seul le mouvement le plus puissant sera gardé !</string>
    <string name="tutoReflexe">Quand le fond est vert : Secouez votre téléphone le plus rapidement possible.\n
                               Quand le fond est jaune : Ne bougez plus votre téléphone. </string>
    <string name="partager">Share</string>
    <string name="reinitialiser">Reset</string>
    <string name="caloriesbrulees">Calories burned</string>
    <string name="rejouer">Play again</string>
    <string name="meilleur">BEST \u0020</string>
    <string name="nothing">...</string>

</resources>
