<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zm.shakethatphone.MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="33">

        <Button
            android:id="@+id/sprint"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:text="@string/sprint"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/reflexe"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#228b22"
            android:textColor="#ffd700"
            android:text="@string/reflexe"
            android:textSize="32sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="33">

        <Button
            android:id="@+id/endurance"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#228b22"
            android:textColor="#ffd700"
            android:text="@string/endurance"
            android:textSize="32sp" />

        <Button
            android:id="@+id/puissance"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:text="@string/puissance"
            android:textSize="32sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="33">

        <Button
            android:id="@+id/options"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:text="@string/options"
            android:textSize="32sp" />

        <Button
            android:id="@+id/profil"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#228b22"
            android:textColor="#ffd700"
            android:text="@string/profil"
            android:textSize="32sp" />

    </LinearLayout>

</LinearLayout>
