<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zm.shakethatphone.Profil"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:text="@string/sprint"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#ffd700"
            android:background="#228b22"
            android:gravity="center"/>

        <TextView
            android:id="@+id/bestSprint"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:text="@string/endurance"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#228b22"
            android:background="#ffd700"
            android:gravity="center"/>

        <TextView
            android:id="@+id/bestEndurance"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#ffd700"
            android:background="#228b22"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:text="@string/reflexe"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#ffd700"
            android:background="#228b22"
            android:gravity="center"/>

        <TextView
            android:id="@+id/bestReflexe"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:text="@string/puissance"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:gravity="center"/>

        <TextView
            android:id="@+id/bestPuissance"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#ffd700"
            android:background="#228b22"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:text="@string/caloriesbrulees"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#ffd700"
            android:background="#228b22"
            android:gravity="center"/>

        <TextView
            android:id="@+id/caloriesBrulees"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reinitialiser"
            android:text="@string/reinitialiser"
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:background="#ffd700"
            android:textColor="#228b22"
            android:gravity="center"/>

        <TextView
            android:id="@+id/partager"
            android:text="..."
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="26sp"
            android:textColor="#ffd700"
            android:background="#228b22"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>
